<resources>
    <string name="app_name">pico botella</string>
    <string name="text_splash">pico botella</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnCerrarDialog">Cerrar</string>
    <string name="retos">Retos</string>
    <string name="descripcion_reto">Descripción reto</string>
    <string name="btn_flotante">Agregar retor</string>
    <string name="agregar_reto">Agregar Reto</string>
    <string name="texto_hint">Escriba el reto</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_guardar">Guardar</string>
    <string name="title_dialog_eliminar">¿Deseas eliminar el siguiente reto?:</string>
    <string name="editar_reto">Editar Reto</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="calificacion">Calificación App</string>
    <string name="titulo_1">¿Cómo se juega?</string>
    <string name="description_1">Los jugadores forman un círculo y en el centro colocan el dispositivo móvil, luego tocan el botón parpadeante para girar la botella. El jugador que señale la botella debe cumplir el reto que lanza la app, de lo contrario abandona el jueg.</string>
    <string name="titulo_2">¿Quién gana?</string>
    <string name="description_2">Gana el último jugador que no abandone el juego</string>
    <string name="name_reglas">Reglas del juego</string>

</resources>