<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gradiente_final"
        tools:context=".view.fragment.ReglasJuegoFragment">
        <include
            android:id="@+id/ic_content_barra"
            layout="@layout/barra_principal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:padding="18dp"
            app:layout_constraintTop_toBottomOf="@id/ic_content_barra"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoregular"
                android:layout_marginTop="5dp"
                android:text="@string/titulo_1"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoregular"
                android:layout_marginTop="30dp"
                android:text="@string/description_1"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoregular"
                android:layout_marginTop="30dp"
                android:text="@string/titulo_2"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoregular"
                android:layout_marginTop="5dp"
                android:text="@string/description_2"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="200dp"
                android:layout_height="260dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/campeon"/>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>